<resources>
    <string name="app_name">Glucose Prediction</string>
    <string name="msg_token_fmt">example</string>
    <string name="title_glucose_prediction">Glucose Prediction</string>
    <string name="action_new_entry">Nueva Entrada</string>
    <string name="action_see_history">Historial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_new_entry_label">Nivel de glucosa</string>
    <string name="action_send">Enviar</string>
    <string name="msg_time">Fecha y hora: %s</string>
    <string name="title_register">Registro</string>
    <string name="preferences_name">com.alfredoqt.glucoseprediction.settings</string>
    <string name="saved_username">PREF_USERNAME</string>
    <string name="msg_new_user_label">Nuevo usuario</string>
    <string name="action_login">Iniciar sesión</string>
    <string name="title_login">Inicia sesión</string>
    <string name="action_register">Regístrate</string>
    <string name="msg_existing_user_label">Usuario existente</string>
    <string name="action_log_out">Cerrar sesión</string>
    <string name="action_status_request">Pedir status</string>
    <string name="action_bulk_upload">Subida masiva</string>
</resources>
