<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dimen_regular_padding"
    android:paddingEnd="@dimen/dimen_regular_padding"
    android:gravity="center"
    tools:context=".HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_time"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dimen_regular_padding"
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_new_entry_label">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="@dimen/dimen_regular_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_send"/>
    </LinearLayout>
</RelativeLayout>