<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/title_login"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                />

        </com.google.android.material.appbar.AppBarLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dimen_regular_padding"
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/dimen_regular_padding"
            android:layout_marginEnd="@dimen/dimen_regular_padding"
            android:layout_height="wrap_content"
            android:hint="@string/msg_existing_user_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:onClick="clickSend"
            android:layout_marginTop="@dimen/dimen_regular_padding"
            android:layout_marginStart="@dimen/dimen_regular_padding"
            android:layout_marginEnd="@dimen/dimen_regular_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_send"/>

        <com.google.android.material.button.MaterialButton
            android:onClick="clickRegister"
            android:layout_marginTop="@dimen/dimen_regular_padding"
            android:layout_marginStart="@dimen/dimen_regular_padding"
            android:layout_marginEnd="@dimen/dimen_regular_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_register"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_loading_opacity"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateOnly="true" />

    </RelativeLayout>
</RelativeLayout>